<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="15dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.authentication.ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        android:visibility="gone"
        android:padding="5dp"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/semester_icon"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot \n Password?"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:fontFamily="@font/impact"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provideyouremail"
        android:textSize="18sp"
        android:fontFamily="@font/itim_regular"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"/>



    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/phone_icon"
        android:visibility="gone"
        android:id="@+id/forgotpassword_phone_number"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/black"
        app:startIconDrawable="@drawable/email_icon"
        android:id="@+id/forgotpassword_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/next_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:onClick="CalllOtpScreen"
        android:background="@drawable/yellow_filled_border_button"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>


</LinearLayout>