<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".activities.device.DetailedDevice">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp">

          <ImageView
              android:id="@+id/hostelimages"
              android:layout_width="match_parent"
              android:layout_height="220dp"
              android:layout_marginBottom="4dp"
              android:background="@drawable/emptyframe"
              android:padding="5dp"
              android:src="@drawable/semester_icon"
              />

            <RelativeLayout
                android:id="@+id/hostelnameLayot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hostelimages"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/floorname"
                    android:layout_toLeftOf="@id/floorname"
                    android:src="@drawable/location_icon"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/floorname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="10dp"
                    android:text="floor"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/devicenamedetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/impact"
                    android:text=" Device Name"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/hostelinfolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionlayout"
                android:layout_marginTop="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/shopNumF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/pleaseenableloc"
                    android:textColor="@color/red"
                    android:textSize="15sp" />





            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hostelinfolayout"
                android:layout_marginTop="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/onTimimgTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="On Timing"
                    android:textColor="@color/red"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/onTimimg"
                    android:layout_toRightOf="@id/onTimimgTittle"
                    android:layout_marginRight="@dimen/margin_30dp"
                    android:layout_marginLeft="@dimen/margin_40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="On Timing"
                    android:layout_below="@+id/onTimimgTittle"
                    android:textColor="@color/green"
                    android:textSize="15sp" />





            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/on"
                android:layout_marginTop="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/offTimimgTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Off Timing"
                    android:textColor="@color/red"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/offTimimg"
                    android:layout_toRightOf="@id/offTimimgTittle"
                    android:layout_marginRight="@dimen/margin_30dp"
                    android:layout_marginLeft="@dimen/margin_40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Off Timing"
                    android:layout_below="@+id/offTimimgTittle"
                    android:textColor="@color/green"
                    android:textSize="15sp" />





            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wardeninfolayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hostelnameLayot"
                android:layout_marginTop="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/shopnametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="@font/varelaround_regular"
                    android:text="@string/wardennametext"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shopnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/varelaround_regular"
                    android:text="@string/numbertext"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <View
                android:id="@+id/simpleLine"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_below="@id/wardeninfolayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="#BDBDBD" />


            <TextView
                android:id="@+id/devicedesctext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wardeninfolayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:gravity="center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAlignment="center"
                android:textColor="@color/darkblue"
                android:textSize="16sp"
                tools:text="Device Description" />


            <RelativeLayout
                android:id="@+id/descriptionlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/devicedesctext">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/empty_frame2">

                    <TextView
                        android:id="@+id/deviceDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/varelaround_regular"
                        android:gravity="center_horizontal"
                        android:lines="5"
                        android:paddingStart="20dp"
                        android:scrollbars="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/hosteldescriptionforlist"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </ScrollView>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/buttonsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="1dp"
                android:baselineAligned="false"
                android:orientation="horizontal">





                <ImageButton
                    android:id="@+id/call"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_background_for_buttons"
                    android:onClick="Callwarden"
                    android:src="@drawable/call_icon"
                    />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>